# canon

./: .gitignore  Cargo.toml  GOAL.md  GOAL_REFACTOR.md  PIPELINE.md  PROJECT_OVERVIEW.md  SSN  TODO.md  build_errors.txt  canonical_names.md  check_layout.py  dag.dot  dag_execution.dot  dag_module.dot  duplicates.py  inspect_explicit_artifacts.py  inspect_ir.py  lib.long-type-11210298315387914115.txt  lib.long-type-322433699438960663.txt  lib.long-type-6442803982856020304.txt  lib.long-type-6997628627615155942.txt  lib.long-type-7203413897449320644.txt  run_canon.sh  run_orchestration.sh  rustfmt.toml  script.sh  sovereign_ai.dot  test.sh  tier_7_ai.dot  tier_7_ai_layout.md  tier_7_ai_layout_crate_dependency.dot  tier_7_ai_layout_master.dot  tier_7_ai_layout_master_v1.dot  tiers_of_ai.md
analysis/: Cargo.toml  Upgrade.md
analysis/examples/: canon_analysis.rs
analysis/src/: lib.rs
analysis/src/abstract_interp/: mod.rs
analysis/src/alias/: mod.rs
analysis/src/call_graph/: mod.rs
analysis/src/cfg/: mod.rs
analysis/src/concurrency/: mod.rs
analysis/src/dataflow/: mod.rs
analysis/src/deadcode/: mod.rs
analysis/src/effect/: mod.rs
analysis/src/escape/: mod.rs
analysis/src/interproc/: mod.rs
analysis/src/lifetime/: mod.rs
analysis/src/report/: mod.rs
analysis/src/scc/: mod.rs
analysis/src/taint/: mod.rs
analysis/src/types/: mod.rs
analysis/src/usedef/: mod.rs
canon/: .#run_seed.sh  CARGO-cheatsheet.md  Canon.dot  Cargo.toml  GOAL.md  PENDING.md  PLAN.md  README.md  SYMBOLS.md  Summary.md  TODO-REFACTOR-TIER-7.md  TODO.md  TODO_self_replicate.md  TODO_self_replicate_DAG.md  TODO_self_replicate_isomorphic_reshaping.md  Tier-1-7-Requirements.md  Tier-7-Architecture.md  cargo_build_json.sh  cargo_dead_code.sh  comments.md  deps.dot  discover.sh  graph.dot  instruction.md  instructions.md  inventory_canon.md  module_dependency.dot  program_complete.dot  repomap.txt  run.sh  run_seed.sh  run_test.sh  tier_7_graph_architecture.md  types.rs
canon/benches/: runtime_profiles.rs
canon/docs/: Canonical_Instructions_v0.md  Canonical_Instructions_v1.md
canon/docs/old/: DEVELOPMENT_PLAN.md  PHASE1_STATUS.md  TO-DO.md  VERSIONING.md  instructions_1.md  to-do-10.md  to-do-2.md  to-do-3.md  to-do-4.md  to-do-5.md  to-do-6.md  to-do-7.md  to-do-8.md  to-do-9.md  to-do-summary.md  to-do.md
canon/kernel/: Cargo.toml
canon/kernel/src/: lib.rs
canon/learn_gate/: LearnGate.lean  README.md
canon/learn_gate/LearnGate/: Basic.lean  Core.lean  Examples.lean  Invariants.lean  Observation.lean  State.lean
canon/proof_gate/: Main.lean  ProofGate.lean  README.md  lakefile.toml
canon/proof_gate/ProofGate/: Basic.lean  Core.lean  Examples.lean  Invariants.lean  Observation.lean  Policy.lean  Proposal.lean  State.lean  Verify.lean
canon/src/: cli.rs  commands.rs  decision.rs  diagnose.rs  diff.rs  dot_export.rs  dot_import.rs  evolution.rs  io_utils.rs  ir.rs  lib.rs  main.rs  materialize.rs  observe.rs  patch_protocol.rs  proof_object.rs  proposal.rs  schema.rs  semantic_builder.rs  validate.rs  version_gate.rs
canon/src/agent/: TIER_7_LOOP.md  bootstrap.rs  call.rs  capability.rs  dispatcher.rs  epoch.rs  io.rs  llm_provider.rs  meta.rs  mod.rs  observe.rs  pipeline.rs  refactor.rs  reward.rs  runner.rs  slice.rs  sse.rs  ws_server.rs
canon/src/decision/: auto_dot.rs  auto_dsl.rs  auto_fn_ast.rs  bootstrap.rs  mod.rs
canon/src/diagnose/: brief.rs  classify.rs  mod.rs  pipeline.rs  predicate.rs
canon/src/evolution/: goal_mutation.rs  kernel_bridge.rs  lyapunov.rs  mod.rs  structural.rs
canon/src/gpu/: codegen.rs  dispatch.rs  fusion.rs  mod.rs
canon/src/ingest/: builder.rs  fs_walk.rs  mod.rs  parser.rs
canon/src/ir/: admission.rs  artifacts.rs  (+17 more)
canon/src_v1/: diff.rs  io_utils.rs  main.rs  observe.rs  schema.rs  semantic_builder.rs  version_gate.rs
canon/test_project_dir/: linter.canon  run.sh
canon/tests/: delta_verification.rs  dsl.rs  evolution.rs  gpu.rs  materializer.rs  materializer_fs.rs  patch_protocol.rs  proof_object.rs  proof_smt.rs  proposal_acceptance.rs  runtime_execution.rs  system_pipeline.rs  validator.rs
capture/: Cargo.toml
capture/examples/: run_capture.rs
capture/src/: ast_capture.rs  cargo_project.rs  internal_graph.rs  lib.rs  multi_capture.rs  unified.rs
capture_rustc/: Cargo.toml  cargo_project.rs.bak2
capture_rustc/examples/: unified_project.rs
capture_rustc/src/: ast.rs  cargo_project.rs  driver.rs  hir.rs  lib.rs  mir.rs
capture_v1/: Cargo.toml
capture_v1/src/: lib.rs  model_builder.rs  multi_capture.rs  shared.rs
compiler_capture/: Cargo.toml
compiler_capture/src/: graph.rs  lib.rs  mod.rs  multi_capture.rs  project.rs
host_runtime/: Cargo.toml  host_runtime.dot  plan.md  run.sh  txt.patch
host_runtime/materialized/: Cargo.toml
host_runtime/src/: host_runtime_call_graph.dot  lean_gate.rs  main.rs  shell_flow.rs  state_io.rs  tlog.rs  verify_flow.rs
kernel/: Cargo.toml  deps.dot
kernel/examples/: minimal_api.rs  snapshot_csr.rs
kernel/src/: engine.rs  engine_commit.rs  kernel.rs  lib.rs  memory_engine.rs  transition.rs  transition_impl.rs
memory/memory_engine/: Cargo.toml  FEATURES.md  FEATURES_1.md  IMPORTANT.md  PENDING.md  PLANNDED-TODO.md  build.rs  mental_model.md  repomap.txt
rename/: Cargo.toml  GOAL.md  GOAL_REFACTOR.md  GOAL_v1.md  GOAL_v2.md  GOAL_v3.md  GOAL_v4.md  GOAL_v5.md  GOAL_v6.md  GOAL_v7.md  GOAL_v9.md  STATUS.md  SYMBOLS.md  cargo_build_json.sh  cargo_fix_point.sh  deps.dot  rename.md  rename_script.sh  repomap.txt
rename/.cargo/: config.toml
rename/examples/: centralize_state_moves.rs  list_symbols.rs  nodeop_editor.rs  nodeop_movesymbol.rs  nodeop_rename.rs  nodeop_smoke.rs  rename.rs  verify_symbol_join.rs
rename/fix_point/: Cargo.toml  cargo_build_json.sh  check.py
rename/src/: api.rs  fs.rs  lib.rs  macros.rs  mod.rs  module_path.rs  occurrence.rs  pattern.rs  resolve.rs  scope.rs
rename/src_v3/: fs.rs
rename/src_v4/: fs.rs  lib.rs
rtree/: Cargo.toml  PROMPT.md  dep.dot  graph.dot  save_bin.sh
rtree/src/: dep_info.rs  main.rs  metadata.rs
(+972 files in other folders)
