# Cargo.toml
[workspace]
members = [
  "canon",
  "lints",
  "test_projects/test_lint",
  "canon/kernel",
  "host_runtime",
  "host_state_controller",
  # "memory/merkle-core", "memory/partition-store", "memory/tlog-writer", "memory/snapshot-manager", "memory/epoch-sealer", "memory/proof-store", "memory/verifier", "memory/root-chain",
  "memory/memory_engine", "canon_invariant", "repomap", "task_taxonomy", "smt",
  "chromium_messenger",
]

resolver = "2"

