# Cargo.toml
[workspace]
members = [
  "canon",
  "lints",
  "test_projects/test_lint",
  "canon/kernel",
  "host_runtime",
  "host_state_controller",
  # "memory/merkle-core", "memory/partition-store", "memory/tlog-writer", "memory/snapshot-manager", "memory/epoch-sealer", "memory/proof-store", "memory/verifier", "memory/root-chain",
  "memory/database", "canon_invariant", "repomap", "task_taxonomy",
  # "smt",
  "chromium_messenger",
  "transform",
  "kernel",
  # "capture",
  # "graph_gpu",
  "algorithms", "rtree", "test_projects/test_rust_project",
  # "analysis",
  "analyzer",
  "test_projects/test_pipeline",
  "kernel",
  "projection",
  "model",
  "orchestration",
  "capture_rustc",
  "rustc_capture_wrapper",
]

exclude = [
  "rename/fix_point"
]

resolver = "2"
