[package]
name = "analysis"
version = "0.1.0"
edition = "2024"

[features]
default = ["rustc_frontend"]
cuda = ["algorithms/cuda"]
rustc_frontend = ["compiler_capture/rustc_frontend"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
compiler_capture = { path = "../compiler_capture" }
database = { path = "../memory/database" }
algorithms = { path = "../algorithms" }

[[example]]
name = "canon_analysis"
required-features = ["rustc_frontend"]
