[package]
name = "canon"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
indexmap = "2.2.6"
once_cell = "1.19.0"
parking_lot = "0.12"
petgraph = "0.6.5"
regex = "1.10.4"
schemars = { version = "0.8.21", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
thiserror = "1.0.61"
blake3 = "1.5.5"
canon-kernel = { path = "kernel" }
itertools = "0.12"
base64 = "0.22"
bincode = "1.3"
rayon = "1.10"
z3 = "0.12"
wgpu = { version = "0.19", features = ["wgsl"] }
bytemuck = "1.14"
futures-intrusive = "0.5"
hex = "0.4"
sha2 = "0.10"
syn = { version = "2.0", features = ["full", "visit"] }
walkdir = "2.5"
memory_engine = { path = "../memory/memory_engine" }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
fs = "0.0.5"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.10.1"
pollster = "0.3"

[[bench]]
name = "runtime_profiles"
harness = false
