[package]
name = "capture"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
syn = { version = "2", features = ["full"] }
walkdir = "2"
model = { path = "../model" }
serde = { version = "1", features = ["derive"] }
capture_rustc = { path = "../capture_rustc", optional = true }

# NOTE:
# rustc_* crates are NOT published on crates.io.
# They require `#![feature(rustc_private)]` + nightly + RUSTC_BOOTSTRAP=1
# and must NOT be declared as crates.io dependencies.

[features]
default = []
rustc = []
rustc_frontend = []
hir = ["capture_rustc"]
