[package]
name = "capture"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[features]
default = ["rustc_frontend"]
rustc_frontend = []

[[bin]]
name = "capture_driver"
path = "src/bin/capture_driver.rs"
required-features = ["rustc_frontend"]

[dependencies]
model = { path = "../model" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "visit", "visit-mut"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
prettyplease = "0.2"
walkdir = "2.5"
tempfile = "3.25"
blake3 = "1"
similar = "2"
