[package]
name = "rename"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
syn = { version = "2", features = ["full", "visit", "visit-mut"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prettyplease = "0.2"
walkdir = "2.5.0"
tempfile = "3.25.0"
