[package]
name = "rename"
version = "0.1.0"
edition = "2024"

[features]
default = ["rustc_frontend"]
rustc_frontend = []
compiler_capture_crate = []
cuda = ["algorithms/cuda"]

[dependencies]
kernel = { path = "../kernel" }
anyhow = "1"
compiler_capture = { path = "../compiler_capture" }
database = { path = "../memory/database" }
algorithms = { path = "../algorithms" }
syn = { version = "2", features = ["full", "visit", "visit-mut"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prettyplease = "0.2"
walkdir = "2.5.0"
tempfile = "3.25.0"
blake3 = "1"
similar = "2"
