[package]
name = "memory_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
parking_lot = "0.12"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4"
bincode = "1.3"
# rayon = "1.8"
memmap2 = "0.9"
proptest = "1"

[dev-dependencies]
rand = "0.8"
