[package]
name = "memory_engine"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
parking_lot = "0.12"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4"
bincode = "1.3"
rayon = "1.8"
memmap2 = "0.9"
proptest = "1"
# cust = "0.8"
cuda-sys = { version = "0.2", optional = true }
bytemuck = { version = "1.14", features = ["derive"] }

[features]
default=["cuda"]
cuda = []

[dev-dependencies]
rand = "0.8"


